--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 /DOGE_Sequential_Model_n24_f3_Scaler_1701719514.pkl
 /DOGE_trade_data__per_1h__20814_items__created_21-Dec-2023_16-07.csv
 /__pycache__
-models/
+/models
